# omni-cache

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ENTERPRISE_COMPLETION_REPORT.md  demo_enterprise.py  docker-compose.yml  pyproject.toml
demo/: Dockerfile  Dockerfile.loadgen  Dockerfile.monitor  QUICK_START.md  README.md  app.py  cache_monitor.py  load_generator.py  requirements-demo.txt
demo/monitoring/: cache_alerts.yml  prometheus.yml
demo/monitoring/grafana/dashboards/: dashboard.yml  omnicache-dashboard.json
demo/monitoring/grafana/datasources/: prometheus.yml
docs/enterprise/: quickstart.md
scripts/: install_enterprise.sh  security_audit.py  validate_enterprise_deps.py
specs/001-base-caching-librabry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-base-caching-librabry/contracts/: cache_api.yaml  cli_commands.yaml  fastapi_integration.yaml
specs/002-implement-adaptive-replacement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-implement-adaptive-replacement/contracts/: analytics_api.yaml  arc_strategy_api.yaml  event_invalidation_api.yaml  hierarchical_cache_api.yaml  ml_prefetch_api.yaml  security_api.yaml
src/omni_cache/: __init__.py
src/omnicache/: __init__.py
src/omnicache/analytics/: __init__.py
src/omnicache/backends/: __init__.py  filesystem.py  hierarchical.py  memory.py  redis.py
src/omnicache/backends/cloud/: __init__.py  azure.py  gcs.py  s3.py
src/omnicache/cli/: __init__.py  config.py  formatters.py  main.py
src/omnicache/cli/commands/: __init__.py  analytics.py  arc.py  cache.py  entry.py  ml.py  security.py  stats.py  tiers.py
src/omnicache/core/: __init__.py  cache.py  events.py  exceptions.py  manager.py  registry.py
src/omnicache/events/: __init__.py  streams.py
src/omnicache/integrations/: __init__.py  fastapi.py
src/omnicache/ml/: __init__.py  collectors.py  models.py  prediction.py  prefetch.py  training.py
src/omnicache/models/: __init__.py  access_pattern.py  backend.py  cache.py  dependency_graph.py  entry.py  key.py  performance_metric.py  result.py  security_policy.py  statistics.py  strategy.py  tier.py  value.py
src/omnicache/security/: __init__.py  keys.py
src/omnicache/strategies/: __init__.py  arc.py  lfu.py  lru.py  priority.py  size.py  ttl.py
tests/contract/: test_analytics_api.py  test_arc_strategy_api.py  test_cache_api_create.py  test_cache_api_entries.py  test_cache_api_list.py  test_cache_api_stats.py  test_cli_cache_commands.py  test_cli_entry_commands.py  test_event_invalidation_api.py  test_fastapi_decorators.py  test_fastapi_middleware.py  test_hierarchical_cache_api.py  test_ml_prefetch_api.py  test_security_api.py
tests/integration/: test_analytics_dashboard.py  test_arc_performance.py  test_backend_failover.py  test_basic_integration.py  test_cli_integration.py  test_enterprise_workflow.py  test_event_invalidation.py  test_fastapi_integration.py  test_final_validation.py  test_ml_prefetching.py  test_security_compliance.py  test_strategy_switching.py  test_tier_management.py
tests/performance/: test_enterprise_benchmarks.py
