[project]
name = "omni-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Khalid Mohamed Elborai", email = "elboraikhalid@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
omni-cache = "omni_cache:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
